// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modularScale should allow a number as a base 1`] = `
Object {
  "font-size": "2.666",
}
`;

exports[`modularScale should allow adjusting the base 1`] = `
Object {
  "font-size": "2.666em",
}
`;

exports[`modularScale should allow adjusting the ratio 1`] = `
Object {
  "font-size": "1em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 1`] = `
Object {
  "font-size": "1.333em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 2`] = `
Object {
  "font-size": "1.776889em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 3`] = `
Object {
  "font-size": "1em",
}
`;
